--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dependencies": {
         "correios-brasil": "^3.0.4",
         "dotenv": "^16.0.3",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "mysql2": "^3.1.2"
     },
     "devDependencies": {
         "eslint": "^8.35.0",
