📝 add licensa MIT

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT License",
     "bugs": {
         "url": "https://github.com/blackdot404/orderful/issues"
     },
