--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "correios-brasil": "^3.0.4",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "mysql2": "^3.1.2"
+        "mongoose": "^7.0.1"
     },
     "devDependencies": {
         "eslint": "^8.35.0",
